--- a/jenkins/jobs/job_templates.yml
+++ b/jenkins/jobs/job_templates.yml
@@ -1,18 +1,10 @@
 - scm:
-    name: config-repo
-    scm:
-      - git:
-         url: git@github.com:lutostag/jenkins-charm-ci-config-repo.git
-         branches:
-          - origin/master
-
-- scm:
     name: jenkins-charm
     scm:
       - git:
-         url: git@github.com:freeekanayaka/layer-jenkins.git
+         url: git@github.com:lutostag/layer-jenkins.git
          branches:
-          - origin/master
+          - origin/built
 
 - scm:
     name: jenkins-bundle
@@ -20,7 +12,7 @@
       - git:
          url: git@github.com:lutostag/jenkins-bundle-example.git
          branches:
-          - origin/master
+          - origin/self-ci
 
 - scm:
     name: bundle-and-deps
@@ -35,7 +27,7 @@
     concurrent: false
     triggers:
         - pollscm:
-            cron: "*/30 * * * *"
+            cron: "* * * * *"
     wrappers:
         - timeout:
             timeout: 1380
@@ -48,12 +40,8 @@
 
 - job:
     name: self-update
-    scm:
-        - config-repo
     concurrent: false
     triggers:
-        - pollscm:
-            cron: "*/30 * * * *"
         - build-result:
             cron: '* * * * *'
             groups:
